tests/invalid_ast_samples/811b5754f3a5636dcac40d0e5f6dca5d4b09324875b9217b6f1d366a98a99d02.py
from ast import Expr
from ast import Load
from ast import Module
from ast import Name
from ast import Starred

tree = Module(
    body=[Expr(value=Starred(value=Name(id="name_0", ctx=Load()), ctx=Load()))],
    type_ignores=[],
)

# version: 3.12.0
#
# Source:
# *name_0
#
#
# Error:
#     SyntaxError("can't use starred expression here", ('<file>', 1, 1, None, 1, 8))
